# dada2-rs

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  justfile  mkdocs.yml
.githooks/: pre-commit
.github/workflows/: ci.yml  concordance.yml  docker.yml  release.yml
comparison/: run_kmer_sweep.sh
comparison/benchmark/: bench_pooled.py  bench_step.R  bench_table.py  compare_bench.py  run_dada2_pooled.R
comparison/concordance/reference/: illumina_seqtab_nochim.csv  pacbio_seqtab_nochim.csv
dev/: compare_errors.R  compare_loess.R  plot_cluster_diag.R  run_kmer_sweep.sh  run_rust_errors.sh  summarize_learn_errors.py
dev/benchmark/: bench_pooled.py  bench_step.R  compare_bench.py  compare_cluster_log.py  run_dada2_pooled.R
dev/concordance/: README.md  compare_to_reference.py  run_illumina.sh  run_pacbio.sh  write_reference.R
dev/concordance/data/pacbio/: README.md
dev/concordance/reference/: README.md  pacbio_seqtab_nochim.csv
dev/wfa-ffi-oracle/: .gitignore  Cargo.toml  README.md  oracle.c  run.sh
dev/wfa-ffi-oracle/src/: main.rs
docs/: benchmarking.md  diagnostics.md  installation.md  results.md  walkthrough-illumina.md
docs/javascripts/: mathjax.js
examples/: import_mia.R
examples/external_errfun/: loess_reference_direct.R
notes/: kmer_size_pacbio_memory.md  kmer_size_screening.md
scripts/: check-build-sync.sh  compare_asvs.py  learnerrors_to_dada2rs.R  plot_expected_error.R  summarize_learn_errors.py
src/: chimera.rs  chimera_diagnostics.rs  cli.rs  cluster.rs  containers.rs  dada.rs  derep.rs  error_models.rs  failed_uniques.rs  filter_trim.rs  kdist_calibrate.rs  kmers.rs  learn_errors.rs  main.rs  merge_pairs.rs  misc.rs  nwalign.rs  remove_bimera.rs  remove_primers.rs  sequence_table.rs  summary.rs
tests/: dada_pseudo.rs
