[package]
name = "dada2-rs"
version = "0.1.1"
edition = "2024"
# Raised from 1.87 to 1.91 by the experimental WFA backend (wfa2lib-rs MSRV).
# Revisit if the WFA backend is dropped.
rust-version = "1.91"
license = "LGPL-3.0-only"
description = "An experimental Rust implementation of the DADA2 amplicon denoising algorithm"
repository = "https://github.com/HPCBio/dada2-rs"
readme = "README.md"
authors = ["Chris Fields <cjfields@illinois.edu>"]
keywords = ["bioinformatics", "amplicon", "dada2", "metagenomics", "asv"]
categories = ["science", "command-line-utilities"]
exclude = ["**/__pycache__/", "*.pyc"]

[dependencies]
noodles = { version = "0.91", features = ["fastq", "fasta", "bgzf"] }
flate2 = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.18"
rand = { version = "0.8", features = ["small_rng"] }
md-5 = "0.10"
sha1 = "0.10"
libc = "0.2"
# Pure-Rust WFA aligner (experimental backend, feat/wfa-backend). default-features
# = false avoids its `mimalloc-alloc` default, which would install a global
# allocator into this crate. Pinned to a SHA on the public HPCBio fork so CI can
# fetch it; for local fork iteration uncomment the [patch] override below.
wfa2lib-rs = { git = "https://github.com/HPCBio/wfa2lib-rs", rev = "4cfeda86a3e1", default-features = false }

[dev-dependencies]
serde_json = "1"

# Opt-in profile for cluster/in-house builds where you control the CPU.
# Adds LTO + codegen-units=1 on top of release, and is intended to be paired
# with `RUSTFLAGS="-C target-cpu=native"` so LLVM uses every ISA extension
# the build host supports (e.g. AVX2/AVX-512 on x86-64, additional features
# beyond aarch64 baseline on Apple Silicon).
#
# Build with:
#   RUSTFLAGS="-C target-cpu=native" cargo build --profile release-native
#
# Output goes to target/release-native/ so it does not clobber `cargo build
# --release`. The portability tradeoff: the resulting binary will only run
# on CPUs at-or-above the build host's microarchitecture.
[profile.release-native]
inherits = "release"
lto = "thin"
codegen-units = 1
